# llm-council-mcp

./: README.md  config.py  discovery.py  installer.py  logic.py  pyproject.toml  server.py
.agents/rules/: mcp_server.md
