[project]
name = "llm-council-mcp"
version = "0.1.0"
description = "MCP Server for the LLM Deliberation Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
llm-council-mcp = "llm_council_mcp.server:main"
